force-app/main/default/objects/Contact/fields/Daily_News_Letter__c.field-meta.xml
<CustomField>
    <fullName>Daily_News_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily News Letter</label>
    <type>Checkbox</type>
</CustomField>