force-app/main/default/objects/Contact/fields/Monthly_News_Letter__c.field-meta.xml
<CustomField>
    <fullName>Monthly_News_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly News Letter</label>
    <type>Checkbox</type>
</CustomField>