force-app/main/default/objects/Contact/fields/Weekly_News_Letter__c.field-meta.xml
<CustomField>
    <fullName>Weekly_News_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly News Letter</label>
    <type>Checkbox</type>
</CustomField>